--- a/_03_bootrap/index06.html
+++ b/_03_bootrap/index06.html
@@ -18,8 +18,9 @@
             text-align: right;
         }
         p::first-letter{
-            font-size: 200%;
+            font-size: 400%;
             color:rgb(148, 18, 18);
+            font-weight: 900;
         }
     </style>
 </head>
