--- a/_03_bootrap/index08.html
+++ b/_03_bootrap/index08.html
@@ -36,12 +36,18 @@
         #table01 {    
             margin:auto;
         }
-       
+        .image img{
+            position: absolute;
+            left: 200px;
+            top: 50px;
+            width: 300px;
+        }
     </style>
 </head>
 <body>
     <div class="goodcook">
         <h1>Các món ngon Hà Nội</h1>
+        <div class="image"><img src="./img/img08.jpg" alt=""></div>
         <table id="table01">
             <tr>
                 <th>STT</th>
